[package]
name = "junctionx2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = "0.10"
rand = "*"
chrono = "*"
sha256 = "*"
tokio = { version = "1", features = ["full"] }
log = "*"
env_logger = "*"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres"] }